# pitchloop

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __main__.py  artifacts.py  fakes.py  orchestrator.py  reflection.py  state.py  tool_author.py
callee/: __init__.py  call_harness.py  rubric.yaml  script.md
contracts/: __init__.py  events.py  models.py  ports.py  serde.py
demo/: __init__.py  prove_nexla.py  recording-checklist.md  run_demo.sh  show_timeline.py  ui.py
demo/static/: dashboard.css
demo/templates/: index.html
docs/: architecture.md  demo-script.md  integration-checklist.md  submission-checklist.md
docs/lineage/: README.md
evidence/: __init__.py  redact.py  sink.py  store.py
fixtures/: __init__.py  public_company_data.json  public_signal_server.py
handoffs/: p3.md  p4.md
infra/pomerium/: README.md
infra/scripts/: probe_policy.sh  start_policy_stack.sh
integrations/: __init__.py  call_client.py  evidence_client.py  policy_client.py  repo_client.py  zero_client.py
pitch/: render.py  transcript_parser.py
scenario/: fact_contract.json  persona.json  run_spec.json
tests/: test_agent_fake_loop.py  test_contracts.py  test_evidence_adapter.py  test_policy_adapter.py  test_repo_adapter.py
